--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ idna==3.10
 passlib==1.7.4
 pydantic==2.10.6
 pydantic_core==2.27.2
+pyopt==0.84
+pyotp==2.9.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
